--- a/client/src/components/EmojiButton.css
+++ b/client/src/components/EmojiButton.css
@@ -7,9 +7,9 @@
 .emoji-circle {
   display: inline-block;
   background-color: #FFF;
-  height: 1.8rem;
-  width: 1.8rem;
-  line-height: 1.8rem;
+  height: 3rem;
+  width: 3rem;
+  line-height: 3rem;
   border-radius: 100%;
   user-select: none;
   vertical-align: middle;
@@ -21,11 +21,9 @@
 
 .counter-circle {
   position: absolute;
-  width: 0.6rem;
-  height: 0.6rem;
   line-height: 0.6rem;
   background: #EF3939;
-  border-radius: 100%;
+  border-radius: 0.2rem;
   font-size: 0.5rem;
   color: #FFFFFF;
   padding: 3px;
@@ -33,4 +31,8 @@
   right: -7px;
   border: 1px solid #FFFFFF;
   box-shadow: 0px 2px 2px #DDD;
+}
+
+.emoji-text {
+  font-size: 2rem;
 }
