--- a/client/src/components/Projects.css
+++ b/client/src/components/Projects.css
@@ -14,13 +14,13 @@ h3 {
 }
 
 .project-container {
-  margin: 0.5rem;
+  margin: 0.2rem;
+  margin-bottom: 1rem;
   width: 20rem;
-  border: 1px solid #DDD;
-  background-color: #FEFEFE;
+  background-color: #FFF;
   padding: 1rem;
   border-radius: 10px;
-  box-shadow: 2px 2px 2px #DDD;
+  box-shadow: 2px 2px 10px #EEE;
 }
 
 .project-container img {
@@ -31,9 +31,14 @@ h3 {
 }
 
 .project-name {
+  font-size: 1.2rem;
   display: block;
-  text-align: center;
   width: 100%;
+}
+
+.project-description {
+  margin-top: 1rem;
+  font-weight: 400;
 }
 
 .skills {
@@ -42,13 +47,13 @@ h3 {
 
 .skills div {
   background-color: #CCCCCC;
-  padding: 5px 7px 5px 7px;
+  padding: 7px 10px 7px 10px;
   border-radius: 3px;
   margin-left: 1rem;
-  border: 1px solid #FEFEFE;
   box-shadow: 5px 5px 5px #EEEEEE;
   cursor: pointer;
   user-select: none;
+  font-weight: bold;
 }
 
 .skills div:first-child {
@@ -61,9 +66,9 @@ h3 {
 }
 
 .mini-skills {
+  margin-top: 1rem;
   text-align: center;
   font-size: 0.7rem;
-  margin: 10px;
 }
 
 .mini-skill {
@@ -75,7 +80,12 @@ h3 {
   user-select: none;
 }
 
-.project-description {
-  font-weight: normal;
-  margin: 10px;
+.project-links {
+  margin-top: 1rem;
+}
+
+.project-links ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
