--- a/client/src/components/Projects.css
+++ b/client/src/components/Projects.css
@@ -19,7 +19,7 @@ h3 {
   width: 20rem;
   background-color: #FFF;
   padding: 1rem;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 2px 2px 10px #EEE;
 }
 
@@ -43,14 +43,17 @@ h3 {
 
 .skills {
   display: flex;
+  flex-wrap: wrap;
+  margin-top: -30px;
 }
 
 .skills div {
-  background-color: #CCCCCC;
+  margin-top: 30px;
+  background-color: #4c7bb9;
   padding: 7px 10px 7px 10px;
   border-radius: 3px;
   margin-left: 1rem;
-  box-shadow: 5px 5px 5px #EEEEEE;
+  box-shadow: 2px 2px 0px 4px #333;
   cursor: pointer;
   user-select: none;
   font-weight: bold;
@@ -60,8 +63,8 @@ h3 {
   margin-left: 0;
 }
 
-.skills .selected {
-  background-color: #37768f;
+.skills .selected, .skills div:active, .skills div:focus, .skills div:hover {
+  background-color: #259c92;
   color: #FFFFFF;
 }
 
@@ -74,7 +77,9 @@ h3 {
 .mini-skill {
   display: inline-block;
   margin: 3px;
-  background-color: #CCCCCC;
+  color: #AAA;
+  /* background-color: #EEE; */
+  box-shadow: 1px 1px 5px 0px #EEE;
   padding: 5px;
   border-radius: 3px;
   user-select: none;
@@ -88,4 +93,13 @@ h3 {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.project-links li:before {
+  content: '> ';
+  font-weight: bold;
+}
+
+.project-links a:hover {
+  font-weight: bold;
 }
