--- a/client/src/components/Projects.css
+++ b/client/src/components/Projects.css
@@ -10,11 +10,11 @@ h3 {
   margin-top: 2rem;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: flex-start;
 }
 
 .project-container {
-  margin: 0.2rem;
+  margin: 0.5rem;
   margin-bottom: 1rem;
   width: 20rem;
   background-color: #FFF;
@@ -44,11 +44,11 @@ h3 {
 .skills {
   display: flex;
   flex-wrap: wrap;
-  margin-top: -30px;
+  margin-top: -20px;
 }
 
 .skills div {
-  margin-top: 30px;
+  margin-top: 20px;
   background-color: #4c7bb9;
   padding: 7px 10px 7px 10px;
   border-radius: 3px;
@@ -57,10 +57,6 @@ h3 {
   cursor: pointer;
   user-select: none;
   font-weight: bold;
-}
-
-.skills div:first-child {
-  margin-left: 0;
 }
 
 .skills .selected, .skills div:active, .skills div:focus, .skills div:hover {
